# argos_bridge

./: .gitignore  CMakeLists.txt  package.xml
argos_worlds/: bug.argos  bug_ros.argos  rand_env_template.argos  random_environment.argos  simple.argos  test_out_environment.argos
argos_worlds/rand_environments/: rand_env_1.argos
argos_worlds/simple_environments/: no_walls.argos  no_walls_no_neat.argos
launch/: launch_I_bug.launch  launch_NEAT.sh  launch_NEAT_GRU.sh  launch_alg_1.launch  launch_alg_2.launch  launch_blind_bug.launch  launch_bug_2.launch  launch_bug_algorithm.launch  launch_com_bug.launch  launch_wall_following.launch
matlab/: bug_comparison.csv  bug_performance_statistics.m  bug_trajectories.csv  generate_environments.m  generate_environments_manual.m  plot_trajectories.m
plugin/: CMakeLists.txt
plugin/argos_ros_bot/: CMakeLists.txt  argos_ros_bot.cpp  argos_ros_bot.h  argos_ros_bot_NEAT.cpp  argos_ros_bot_NEAT.h  argos_ros_bot_WF.h  argos_ros_bot_WF_NEAT.h  argos_ros_bot_quad.cpp  argos_ros_bot_quad.h
plugin/loop_functions/: CMakeLists.txt  fitness_score_loop_function.cpp  fitness_score_loop_function.h  master_loop_function.cpp  master_loop_function.h  random_environment_generator.cpp  random_environment_generator.h  trajectory_loop_functions.cpp  trajectory_loop_functions.h
plugin/simulation/: CMakeLists.txt  argos_ros_start_simulation.cpp
scripts/: alg_1_controller.py  alg_2_controller.py  blind_bug_controller.py  bug_2_controller.py  bug_algorithms.py  com_bug_controller.py  i_bug_controller.py  random_environment_generator.py  receive_rostopics.py  wall_following.py  wall_following2.py  wall_following_controller.py
srv/: GetCmds.srv  StartSim.srv  SwitchBug.srv
